--- a/index.html
+++ b/index.html
@@ -1,95 +1,72 @@
 <!DOCTYPE html>
 <html>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyARxs_0QWBQzZ-7tnFIkcz6Tzh5Fr1I0xg"></script>
-<div id="map" style="width:1024px; height:768px"></div>
+<head>
+<meta charset="utf-8" />
+<title>Add a default marker</title>
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
+<style>
+  body { margin: 0; padding: 0; }
+  #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+
+.map-overlay {
+  position: absolute;
+  left: 0;
+  padding: 10px;
+}
+ 
+</style>
+</head>
+<body>
+<div id="map"></div>
+
+<div class="map-overlay top">
+  <button style="font-size: 2em" onclick="move()">
+    Show stops between MIT and Harvard
+  </button>
+</div>
+ 
 <script>
+  mapboxgl.accessToken = 'pk.eyJ1Ijoic29mdGV4cGVyaW1lbnQiLCJhIjoiY2tjMngyZm9rMDFvajJzczJ3aWo0bnh6aiJ9.Bc_qK9Xf8SFBXkFM_x2gpg';
 
-var map;
-var markers = [];
+  var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: [-71.104081, 42.365554],
+      zoom: 14
+  });
+ 
+var marker = new mapboxgl.Marker()
+    .setLngLat([-71.092761, 42.357575])
+    .addTo(map);
 
-// load map
-function init(){
-	var myOptions = {
-		zoom      : 14,
-		center    : { lat:42.353350,lng:-71.091525},
-		mapTypeId : google.maps.MapTypeId.ROADMAP
-	};
-	var element = document.getElementById('map');
-  	map = new google.maps.Map(element, myOptions);
-  	addMarkers();
+const busStops = [
+    [-71.093729, 42.359244], 
+    [-71.094915, 42.360175],
+    [-71.095800, 42.360698],
+    [-71.099558, 42.362953],
+    [-71.103476, 42.365248],
+    [-71.106067, 42.366806],
+    [-71.108717, 42.368355],
+    [-71.110799, 42.369192],
+    [-71.113095, 42.370218],
+    [-71.115476, 42.372085],
+    [-71.117585, 42.373016],
+    [-71.118625, 42.374863]
+];
+
+let counter = 0;
+function move(){
+  setTimeout(()=>{
+    if (counter >= busStops.length) return;
+    marker.setLngLat(busStops[counter]);
+    counter++;
+    move();
+  },1000); 
 }
-
-// Add bus markers to map
-async function addMarkers(){
-	// get bus data
-	var locations = await getBusLocations();
-
-	// loop through data, add bus markers
-	locations.forEach(function(bus){
-		var marker = getMarker(bus.id);		
-		if (marker){
-			moveMarker(marker,bus);
-		}
-		else{
-			addMarker(bus);			
-		}
-	});
-
-	// timer
-	console.log(new Date());
-	setTimeout(addMarkers,15000);
-}
-
-// Request bus data from MBTA
-async function getBusLocations(){
-	var url = 'https://api-v3.mbta.com/vehicles?api_key=ca34f7b7ac8a445287cab52fb451030a&filter[route]=1&include=trip';	
-	var response = await fetch(url);
-	var json     = await response.json();
-	return json.data;
-}
-
-function addMarker(bus){
-	var icon = getIcon(bus);
-	var marker = new google.maps.Marker({
-	    position: {
-	    	lat: bus.attributes.latitude, 
-	    	lng: bus.attributes.longitude
-	    },
-	    map: map,
-	    icon: icon,
-	    id: bus.id
-	});
-	markers.push(marker);
-}
-
-function getIcon(bus){
-	// select icon based on bus direction
-	if (bus.attributes.direction_id === 0) {
-		return 'red.png';
-	}
-	return 'blue.png';	
-}
-
-function moveMarker(marker,bus) {
-	// change icon if bus has changed direction
-	var icon = getIcon(bus);
-	marker.setIcon(icon);
-
-	// move icon to new lat/lon
-    marker.setPosition( {
-    	lat: bus.attributes.latitude, 
-    	lng: bus.attributes.longitude
-	});
-}
-
-function getMarker(id){
-	var marker = markers.find(function(item){
-		return item.id === id;
-	});
-	return marker;
-}
-
-window.onload = init;
 
 </script>
+ 
+</body>
 </html>
